// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should indicate authenticated failed if form submission is not successful: Error msg and Formik 1`] = `
<Fragment>
  <p>
    Login failed! Check your credentials!
  </p>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should indicate authenticated failed if form submission is not successful: Formik children 1`] = `
<form
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    label="Username"
    name="username"
    type="text"
  />
  <Field
    label="Password"
    name="password"
    type="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Login component should render a login form if user is not authenticated: Formik 1`] = `
<Fragment>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should render a login form if user is not authenticated: Formik children 1`] = `
<form
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    label="Username"
    name="username"
    type="text"
  />
  <Field
    label="Password"
    name="password"
    type="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;
